--- a/frontweb/src/assets/styles/custom.scss
+++ b/frontweb/src/assets/styles/custom.scss
@@ -1,6 +1,8 @@
 $theme-colors: (
 'primary': #F78B00,
+'secondary': #00285f,
 );
 $body-bg: #e5e5e5;
 $body-color: #00285F;
+
 @import '~bootstrap/scss/bootstrap.scss';
