--- a/frontweb/src/pages/Home/styles.css
+++ b/frontweb/src/pages/Home/styles.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #ffff;
+  height: 573px;
+  background-color: #E5E5E5;
   padding: 10px 10px;
   font-size: 22px;
 }
