Navbar responsiveness with 1200px

--- a/frontweb/src/components/Navbar/styles.css
+++ b/frontweb/src/components/Navbar/styles.css
@@ -33,3 +33,9 @@ a:hover {
 .navbar-toggler{
   background-color: #F78B00;
 }
+
+@media(min-width: 1200px){
+  .main-nav{
+    padding: 22px 150px 22px 150px;
+  }
+}
