--- a/frontweb/src/pages/Catalog/styles.css
+++ b/frontweb/src/pages/Catalog/styles.css
@@ -1,9 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .catalog-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100vh;
   background: #f9f7f7;
-  width: 320px;
-  height: 564px;
-  padding: 20px;
 }
