--- a/frontweb/src/pages/Catalog/styles.css
+++ b/frontweb/src/pages/Catalog/styles.css
@@ -10,5 +10,12 @@
   width: 100%;
   height: 100vh;
   padding: 20px 10px 20px 10px;
-  background: #f9f7f7;
+  background: #fff;
+}
+
+
+@media(min-width: 1200px){
+  .catalog-container{
+    padding: 30px 150px 30px 150px;
+  }
 }
