--- a/frontweb/src/components/ProductCard/styles.css
+++ b/frontweb/src/components/ProductCard/styles.css
@@ -1,8 +1,9 @@
 .product-card-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  background: #e1e8e8;
+  background: #EDEDED;
   width: 300px;
   height: 347px;
   margin-top: 20px;
@@ -27,7 +28,8 @@
 .product-description {
   display: flex;
   justify-content: center;
-  width: 270px;
+  align-items: center;
+  width: 90%;
   height: 35px;
   margin-top: 14px;
 }
@@ -41,10 +43,40 @@
 }
 
 .btn-purchase {
-  width: 258px;
+  width: 86%;
   height: 40px;
   margin-top: 38px;
   background: #00285f;
   color: #fff;
   border-radius: 5px;
+}
+
+@media(min-width: 576px){
+  .product-card-container{
+    width: 258px;
+  }
+
+  .product-description{
+    width: 90%;
+  }
+
+  .product-description p{
+    font-size: 12px;
+  }
+}
+
+@media(min-width: 768px){
+  .product-card-container{
+    width: 349px;
+  }
+
+  .product-description p{
+    font-size: 14px;
+  }
+}
+
+@media(min-width: 992px){
+  .product-card-container{
+    width: 296px;
+  }
 }
