--- a/frontweb/src/pages/Catalog/styles.css
+++ b/frontweb/src/pages/Catalog/styles.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: auto;
   padding: 20px 10px 20px 10px;
   background: #fff;
 }
