--- a/frontweb/src/pages/Home/styles.css
+++ b/frontweb/src/pages/Home/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #e5e5e5;
+  background-color: #fff;
   padding: 0 10px;
   font-size: 22px;
 }
